--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -4,7 +4,7 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
-			<family>Jetbrains Mono</family>
+			<family>Liberation Mono</family>
 		</prefer>
 	</alias>
 </fontconfig>
