Updates to files

--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -1,4 +1,4 @@
-music_directory		"~/mus/Organized"
+music_directory		"~/mus/mpd"
 playlist_directory	"~/.config/mpd/playlists"
 db_file 		"~/.config/mpd/db"
 state_file		"~/.config/mpd/state"
